--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.20.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.15.0",
     "vite": "^6.1.0"
   }
 }
