--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.15.0",
+    "sass-embedded": "^1.85.0",
     "vite": "^6.1.0"
   }
 }
